Fixes star icon spacing in env card

--- a/index.css
+++ b/index.css
@@ -93,3 +93,7 @@ h3{
 .github-button{
     padding-top: 2em !important; 
 }
+
+.fa-star{
+    margin-left: 0.3em;
+}
